deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: registry.access.redhat.com/ubi10/nginx-126@sha256:4c3e5e60d785e6e8bb25a13320fffae720cf0a5d1c3d161c2fb98567421da840
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "150Mi"
          requests:
            cpu: "0.5"
            memory: "100Mi"
        command: ["nginx", "-g", "daemon off;"] 
        volumeMounts:
        - name: config-volume
          mountPath: /opt/app-root/src/
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: webb-page
          items:
          - key: index.html
            path: index.html
